--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-   "homepage": "https://ingapirogova.github.io/goit-react-hw-05-movies/",
-  
+  "homepage": "https://ingapirogova.github.io/goit-react-hw-05-movies/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.8.0",
